syntax = "proto3";
package pb;

//领域升级
message AreaUpLvReq{
	int32 heroIndex = 1;
	int32 id = 2;
}
message AreaUpLvAck{
	int32 heroIndex = 1;
	int32 id = 2;
	int32 lv = 3;
}